fix: postion of form on mobile

--- a/api/client/blocks/chat/chat.css
+++ b/api/client/blocks/chat/chat.css
@@ -55,6 +55,8 @@
 .chat-input {
   display: flex;
   flex-direction: column;
+  position: sticky;
+  bottom: -20px;
 }
 
 .chat-input * {
